--- a/limbo/affiliate/templates/blog/game/IPL/kxipvsrcb.html
+++ b/limbo/affiliate/templates/blog/game/IPL/kxipvsrcb.html
@@ -58,8 +58,9 @@
           <p><b>Kings XI Punjab</b> Squad: Lokesh Rahul(w/c), Mayank Agarwal, Karun Nair, Nicholas Pooran, Glenn Maxwell, Sarfaraz Khan, Krishnappa Gowtham, Chris Jordan, Mohammed Shami, Sheldon Cottrell, Ravi Bishnoi, Chris Gayle, Mandeep Singh, Murugan Ashwin, James Neesham, Deepak Hooda, Hardus Viljoen, Jagadeesha Suchith, Ishan Porel, Mujeeb Ur Rahman, Tajinder Singh, Darshan Nalkande, Arshdeep Singh, Simran Singh, Harpreet Brar.</p>
           <p><b>Royal Challengers Bangalore  </b> Squad: Devdutt Padikkal, Aaron Finch, Virat Kohli(c), AB de Villiers, Shivam Dube, Josh Philippe(w), Washington Sundar, Navdeep Saini, Umesh Yadav, Dale Steyn, Yuzvendra Chahal, Parthiv Patel, Isuru Udana, Moeen Ali, Pawan Negi, Gurkeerat Singh Mann, Chris Morris, Adam Zampa, Pavan Deshpande, Mohammed Siraj, Shahbaz Ahmed. </p>
           <hr class="my-2">
+          <img class="image" src="{% static 'image/article/game/IPL/dream11.jpg'%}" alt="">
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Playing XIs (CSK vs RR):</h3>
-          <p><b>Kings XI Punjab   :</b></p>
+          <p><b>Kings XI Punjab:</b></p>
           <p>KL Rahul (C, wk), Mayank Agarwal, Karun Nair, Nicholas Pooran/Chris Gayle, Sarfaraz Khan, Glenn Maxwell, Krishnappa Gowtham, Chris Jordan/Sheldon Cottrell, Mujeeb ur Rahman, Ravi Bishnoi, Mohammed Shami.</p>
           <p><b>Royal Challengers Bangalore  :</b></p>
           <p> Aaron Finch, Devdutt Padikkal, Virat Kohli (C), AB de Villiers, Josh Philippe (wk), Washington Sundar, Shivam Dube, Navdeep Saini, Umesh Yadav, Dale Steyn, Yuzvendra Chahal.</p>
