--- a/limbo/affiliate/templates/blog/game/IPL/rrvskxip.html
+++ b/limbo/affiliate/templates/blog/game/IPL/rrvskxip.html
@@ -35,6 +35,9 @@
         .image1{
           margin-left: 50px;
         }
+        footer{
+          height: 530px;
+        }
       }
     </style>
     <!-- review and spec -->
