--- a/limbo/affiliate/templates/blog/game/IPL/srhvsdc.html
+++ b/limbo/affiliate/templates/blog/game/IPL/srhvsdc.html
@@ -48,8 +48,8 @@
           <h5 style="font-weight: 400;">Delhi Capitals have won a the last match against chennai Super Kings and it is going to be a first match of Sunrisers Hyderabad against chennai.</h5>
           <hr class="my-2">
           <div class="">
-          <img class="image" src="{% static 'image/article/game/IPL/srhvsdc.png'%}" alt="">
-          <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google uploaded by: <a href="#">asianetnews.com</a></p>
+          <img class="image" src="{% static 'image/article/game/IPL/srhvsdc.jpg'%}" alt="">
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google uploaded by: <a href="#">Sports Monks</a></p>
           <p>Today Delhi Capitals  take on Sunrisers Hyderabad in Match 11 of IPL 2020 and The match will be played at the Sharjah Cricket Stadium in UAE.</p>
           <p>The match will start at <b>19:30 IST</b> (14:00 GMT), 18:00 LOCAL.</p>
           <hr class="my-2">
