--- a/limbo/affiliate/templates/blog/game/IPL/rrvskkr.html
+++ b/limbo/affiliate/templates/blog/game/IPL/rrvskkr.html
@@ -70,10 +70,10 @@
           <p>Shubman Gill, Sunil Narine, Nitish Rana, Dinesh Karthik (c & wk), Eoin Morgan, Andre Russell, Pat Cummins, Shivam Mavi, Kuldeep Yadav, Varun Chakravarthy, Kamlesh Nagarkoti.</p>
           <hr class="my-2">
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Dream11 Prediction</h3>
-          <p><b>Wicket Keeper:</b> Jonny Bairstow(vc)</p>
-          <p><b>Batsmen:</b> David Warner(c), Manish Pandey, Shreyas Iyer, Prithvi Shaw</p>
-          <p><b>AR:</b> Mohammad Nabi, Marcus Stoinis</p>
-          <p><b>Bowler:</b> Kagiso Rabada, Anrich Nortje, T Natarajan, Rashid Khan</p>
+          <p><b>Wicket Keeper:</b> Jos Buttler, Sanju Samson</p>
+          <p><b>Batsmen:</b> Eoin Morgan, Shubman Gill, Steven Smith</p>
+          <p><b>AR:</b> Andre Russell, Rahul Tewatia</p>
+          <p><b>Bowler:</b> Shivam Mavi, Varun Chakravarthy, Jaydev Unadkat, Jofra Archer</p>
           <img class="image1" src="{% static 'image/article/game/IPL/10.jpg'%}" alt="">
           <p></p>
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Which contest would be best to participate</h3>
