--- a/limbo/affiliate/templates/mobile/mi/mi 10t/mi-10t.html
+++ b/limbo/affiliate/templates/mobile/mi/mi 10t/mi-10t.html
@@ -265,7 +265,7 @@
       </div>
     </div>
     <div class="comment">
-      <div style="background: white;" class="fb-comments" data-href="https://www.hipein.com/mobile/mi-10t" data-numposts="5" data-width=""></div>
+      <div style="background: white;" class="fb-comments" data-href="https://www.hipein.com/mobile/mi-10t" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
 
