--- a/limbo/affiliate/templates/mobile/apple/12 mini/12-mini.html
+++ b/limbo/affiliate/templates/mobile/apple/12 mini/12-mini.html
@@ -14,9 +14,9 @@
           <p>Apple is about to launch its new iPhone 12 mini soon. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/apple/iphone-12-mini-2.png'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/apple/iphone-12-mini-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google - Uploaded by: <a href="#">Tom's Guide</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google - Uploaded by: <a href="#">MacRumors</a></p>
         <div class="info">
           <h2 style="font-weight: 400;">About iPhone 12 mini</h2>
           <p>Apple is going to launch iPhone 12 mini soon, taking iPhone series one step further. iPhone 12 mini smartphone runs on the latest version of the iOS 14.1. The phone runs on Apple A14 Bionic (5 nm) Chipset. </p>
