--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -177,15 +177,15 @@
     <!-- content -->
     <div class="card-group">
       <div class="card">
-        <a href="{% url 'realme7' %}"><img src="{% static 'image/mobile/realme/realme-7-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'iphone12mini' %}"><img src="{% static 'image/mobile/apple/iphone-12-mini-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Realme 7 : 6/64GB Read Full review</h4>
+          <h4><span>REVIEW</span> iPhone 12 mini : 4/64GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'realme7' %}"><p class="card-text"><b>What can be the price of Realme 7 in India?</b></p></a></li>
-            <li><a href="{% url 'realme7' %}"><p class="card-text"><b>When can Realme 7 be released in India?</b></p></a></li>
-            <li><a href="{% url 'realme7' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'iphone12mini' %}"><p class="card-text"><b>What can be the price of 12 mini in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12mini' %}"><p class="card-text"><b>When can 12 mini be released in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12mini' %}"><p class="card-text"><b>iPhone 12 mini - Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
@@ -232,28 +232,28 @@
         </div>
       </div>
       <div class="card">
-        <a href="{% url 's20fe' %}"><img src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'iphone12' %}"><img src="{% static 'image/mobile/apple/iphone-12-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Samsung Galaxy S20 FE : 6/128GB  Read Full review.</h4>
+          <h4><span>REVIEW</span> iPhone 12 : 4/64GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>What can be the price of Galaxy S20 FE in India?</b></p></a></li>
-            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>When can Galaxy S20 FE be released in India?</b></p></a></li>
-            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'iphone12' %}"><p class="card-text"><b>What can be the price of iPhone 12 in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12' %}"><p class="card-text"><b>When can iPhone 12 be released in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12' %}"><p class="card-text"><b>iPhone 12 - Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'mi10tpro' %}"><img src="{% static 'image/mobile/mi/mi-10t-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'realme7' %}"><img src="{% static 'image/mobile/realme/realme-7-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Xiaomi Mi 10T Pro : 8/128GB Read Full review</h4>
+          <h4><span>REVIEW</span> Realme 7 : 6/64GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>What can be the price of Mi 10T Pro in India?</b></p></a></li>
-            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>When can Mi 10T Pro be released in India?</b></p></a></li>
-            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'realme7' %}"><p class="card-text"><b>What can be the price of Realme 7 in India?</b></p></a></li>
+            <li><a href="{% url 'realme7' %}"><p class="card-text"><b>When can Realme 7 be released in India?</b></p></a></li>
+            <li><a href="{% url 'realme7' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
