--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -219,15 +219,15 @@
     <!-- 2 -->
     <div class="card-group">
       <div class="card">
-        <a href="{% url 'narzo20pro' %}"><img src="{% static 'image/mobile/realme/narzo-20-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'iphone12pro' %}"><img src="{% static 'image/mobile/apple/iphone-12-pro-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Realme Narzo 20 Pro : 6/64GB Read Full review</h4>
+          <h4><span>REVIEW</span> iPhone 12 Pro : 4/64GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>What can be the price of Narzo 20 Pro in India?</b></p></a></li>
-            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>When can Narzo 20 Pro be released in India?</b></p></a></li>
-            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'iphone12pro' %}"><p class="card-text"><b>What can be the price of iPhone 12 Pro in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12pro' %}"><p class="card-text"><b>When can iPhone 12 Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12pro' %}"><p class="card-text"><b>iPhone 12 Pro - Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
