--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -35,407 +35,432 @@
         background-attachment: fixed;
         background: #eee;
       }
-    header{
-      position: relative;
-      width: 100%;
-      margin: 0;
-      padding: 10px;
-      background: #fff;
-      box-sizing: border-box;
-      box-shadow: 0 2px 5px rgba(0,0,0,.2);
-    }
-    .logo{
-      color: #0984e3;
-      height: 60px;
-      font-size: 36px;
-      line-height: 60px;
-      padding: 0 20px;
-      text-align: center;
-      box-sizing: border-box;
-      float: left;
-      font-weight: 700;
-      text-decoration: none;
-      cursor: default;
-    }
-    nav{
-      float: right;
-    }
-    .clearfix{
-      clear: both;
-    }
-    nav ul {
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-    nav ul li{
-      list-style: none;
-    }
-    nav ul li a{
-      display: block;
-      margin: 10px 0;
-      padding: 10px 20px;
-      text-decoration: none;
-      color: #262626;
-    }
-    nav ul li a.active,
-    nav ul li a:hover{
-      background: #0984e3;
-      color: #fff;
-      transition: 0.5s;
-      text-decoration: none;
-    }
-    .search_bar{
-      width: 100%;
-      display: flex;
-      height: 55px;
-      border: 1px solid;
-      position: relative;
-      margin-bottom: 1rem;
-      border: 1px solid transparent;
-      background: #0984e3;
-      color: white;
-    }
-    .alert{
-      flex: 2;
-    }
-    #srh{
-      margin-top: 9px;
-      margin-right: 10px;
-      float: right;
-    }
-
-    #srh input{
-      width: 410px;
-      height: 35px;
-      border: 1px solid #0984e3;
-      border-radius: 2px;
-      padding: 0 0 2px 10px ;
-    }
-
-    #srh button{
-      width: 80px;
-      height: 33px;
-      color: #fff;
-      background-color: #0984e3;
-      border: 1px solid #fff;
-      border-radius: 2px;
-      padding-bottom: 2px;
-    }
-        /* brand links */
-    .brand-header{
-      position: relative;
-      width: 79.6%;
-      height: 45px;
-      margin: 20px 200px 20px 150px;
-      background: #fff;
-      box-sizing: border-box;
-      /* box-shadow: 0 2px 5px rgba(0,0,0,.2); */
-    }
-    .brand{
-      color: #4b6584;
-      height: 60px;
-      font-size: 25px;
-      padding: 2px 10px;
-      text-align: center;
-      box-sizing: border-box;
-      float: left;
-      font-weight: 700;
-      text-decoration: none;
-      cursor: default;
-    }
-    .brand-link{
-      float: right;
-    }
-    .clrfix{
-      clear: both;
-    }
-    .brand-link ul {
-      margin: -10px 0 0 0;
-      padding: 0;
-      display: flex;
-    }
-    .brand-link ul li{
-      list-style: none;
-    }
-    .brand-link ul li a{
-      display: block;
-      margin: 10px 0;
-      padding: 10px 20px;
-      text-decoration: none;
-      color: #262626;
-    }
-    .brand-link ul li a.active,
-    .brand-link ul li a:hover{
-      background: #4b6584;
-      color: #fff;
-      transition: 0.5s;
-      text-decoration: none;
-    }
-
-
-
-    /* quick link */
-    .quick-link{
+      header{
+        position: relative;
+        width: 100%;
+        margin: 0;
+        padding: 10px;
+        background: #fff;
+        box-sizing: border-box;
+        box-shadow: 0 2px 5px rgba(0,0,0,.2);
+      }
+      .logo{
+        color: #0984e3;
+        height: 60px;
+        font-size: 36px;
+        line-height: 60px;
+        padding: 0 20px;
+        text-align: center;
+        box-sizing: border-box;
+        float: left;
+        font-weight: 700;
+        text-decoration: none;
+        cursor: default;
+      }
+      nav{
+        float: right;
+      }
+      .clearfix{
+        clear: both;
+      }
+      nav ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+      }
+      nav ul li{
+        list-style: none;
+      }
+      nav ul li a{
+        display: block;
+        margin: 10px 0;
+        padding: 10px 20px;
+        text-decoration: none;
+        color: #262626;
+      }
+      nav ul li a.active,
+      nav ul li a:hover{
+        background: #0984e3;
+        color: #fff;
+        transition: 0.5s;
+        text-decoration: none;
+      }
+      .search_bar{
+        width: 100%;
+        display: flex;
+        height: 55px;
+        border: 1px solid;
+        position: relative;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        background: #0984e3;
+        color: white;
+      }
+      .alert{
+        flex: 2;
+      }
+      #srh{
+        margin-top: 9px;
+        margin-right: 10px;
+        float: right;
+      }
+      #srh input{
+        width: 410px;
+        height: 35px;
+        border: 1px solid #0984e3;
+        border-radius: 2px;
+        padding: 0 0 2px 10px ;
+      }
+      #srh button{
+        width: 80px;
+        height: 33px;
+        color: #fff;
+        background-color: #0984e3;
+        border: 1px solid #fff;
+        border-radius: 2px;
+        padding-bottom: 2px;
+      }
+      .brand-header{
+        position: relative;
+        width: 79.6%;
+        height: 45px;
+        margin: 20px 200px 20px 150px;
+        background: #fff;
+        box-sizing: border-box;
+      }
+      .brand{
+        color: #4b6584;
+        height: 60px;
+        font-size: 25px;
+        padding: 2px 10px;
+        text-align: center;
+        box-sizing: border-box;
+        float: left;
+        font-weight: 700;
+        text-decoration: none;
+        cursor: default;
+      }
+      .brand-link{
+        float: right;
+      }
+      .clrfix{
+        clear: both;
+      }
+      .brand-link ul {
+        margin: -10px 0 0 0;
+        padding: 0;
+        display: flex;
+      }
+      .brand-link ul li{
+        list-style: none;
+      }
+      .brand-link ul li a{
+        display: block;
+        margin: 10px 0;
+        padding: 10px 20px;
+        text-decoration: none;
+        color: #262626;
+      }
+      .brand-link ul li a.active,
+      .brand-link ul li a:hover{
+        background: #4b6584;
+        color: #fff;
+        transition: 0.5s;
+        text-decoration: none;
+      }
+      .quick-link{
         display: flex;
         width: 80%;
         margin: 0px 200px 50px 144px;
-    }
-    .link1, .link2, .link3{
-      width: 34%;
-      height: 40px;
-      padding-top: 4px;
-      text-align: center;
-      background: #4b6584;
-      border-radius: 3px;
-      margin-left: 10px;
-
-    }
-    .link1 a, .link2 a, .link3 a{
-      color: white;
-      font-size: 20px;
-      text-decoration: none;
-    }
-    .link4, .link5{
-      width: 50%;
-      height: 40px;
-      padding-top: 4px;
-      text-align: center;
-      background: #20bf6b;
-      border-radius: 3px;
-      margin-left: 10px;
-      margin-top: -40px;
-    }
-    .link4 a, .link5 a{
-      color: white;
-      font-size: 20px;
-      text-decoration: none;
-    }
-    /* offer */
-    .offer{
-      width: 79.3%;
-      height: 250px;
-      margin: 10px 200px 20px 150px;
-      display: flex;
-    }
-    .offer1{
-      width: 49%;
-      height: 249px;
-      margin-right: 20px;
-      border-radius: 5px;
-      box-shadow: -1px 9px 20px -12px rgba(0, 0, 0, 0.75);
-      background-color: #fff;
-    }
-    .banner-img{
-      width: 100%;
-      border-radius: 5px;
-      box-shadow: -1px 9px 20px -12px rgba(0, 0, 0, 0.75);
-      height: 250px;
-      margin: 0;
-    }
-    .offer2{
-      width: 49%;
-      height: 249px;
-      border-radius: 5px;
-      box-shadow: -1px 9px 20px -12px rgba(0, 0, 0, 0.75);
-      background-color: #fff;
-    }
-    /* main page design */
-    .content{
-      background-color: #fff;
-      width: 80%;
-      height: 500px;
-      margin: 30px 200px 20px 150px;
-      padding: 10px;
-      box-shadow:  0 .1rem .8rem rgba(0,0,0,.2);
-      border-radius: .8rem;
-      align-items: center;
-      justify-content: center;
-
-    }
-    .content_img img{
-      width: 500px;
-      height: 380px;
-      transform: translateX(-30px);
-      box-shadow:  0 .1rem .8rem rgba(0,0,0,.2);
-      border-radius: .8rem;
-      object-fit: cover;
-      margin-top: 45px;
-    }
-    .content_body{
-      display: flex;
-      align-items: center;
-    }
-    .content_tittle span{
-      color: red;
-    }
-    .content_info{
-      margin-top: -20px;;
-
-    }
-    .content_tittle{
-      font-size: 22px;
-    }
-    .content_text{
-      margin-top: 20px;
-      font-size: 17px;
-    }
-    .content_text span{
-      color: red;
-    }
-    .content_spec{
-      color: #0984e3;
-    }
-    .content_info p{
-      margin-top: 20px;
-    }
-    .aff-link1{
-      display: flex;
-    }
-    button{
-      width: 300px;
-    }
-    .affilated-link_flipcart{
-      margin-left:30px;
-    }
-    /* footer css */
-    footer{
-      display: flex;
-      height: 280px;
-      background-color: #353b48;
-      color: #eee;
-      position: relative;
-    }
-    .footer_info{
-      flex: 1;
-      padding: 10px;
-      margin-left: 140px;
-    }
-    .footer_info a{
-      color: #eee;
-      font-size: 20px;
-      padding-right: 10px;
-    }
-    .product{
-      flex: 1;
-      padding: 10px;
-      margin-left: 190px;
-    }
-    .product a{
-      color: #eee;
-    }
-    .product a:hover{
-      font-size: 20px;
-      text-decoration: none;
-      transition: 0.5s ease;
-    }
-    .footer_link{
-      flex: 1;
-      padding: 10px;
-    }
-    .footer_link a{
-      color: #eee;
-    }
-    .copyright{
-      width: 100%;
-      position: absolute;
-      background-color: #535c68;
-      color: #eee;
-      text-align: center;
-      bottom: 0px;
-    }
-    .copyright_text{
-      margin-top: 10px;
-    }
-    @media (max-width: 1500px){
-      .content_img img{
-        width: 410px;
-      }
-      button{
-        width: 250px;
-      }
-      .affilated-link_flipcart{
-        margin-left:30px;
-      }
-    }
-    @media (max-width: 1200px) {
-      .alert{
-        flex: 1;
-      }
-      #srh{
-        position: relative;
-        margin-left: 0px;
-        width: 50%;
-        display: flex;
-      }
-      #srh input{
-        width: 82%;
-      }
-      #srh button{
-        margin-left: 10px;
-      }
-
-      .offer{
-        width: 100%;
-        margin: 20px 0;
-      }
-      .content_text{
-        font-size: 16px;
-      }
-         /* brand links */
-      .brand-header{
-        width: 100%;
-        margin: 0;
-      }
-      .brand{
-        margin-top: 2px;
-        padding: 0;
-      }
-      /* quick links */
-      .quick-link{
-        width: 100%;
-        margin-left: 0px;
-      }
-      .link1{
-        margin-left: 0;
       }
       .link1, .link2, .link3{
-        width: 32.6%;
-        margin-top: -5px;
+        width: 34%;
+        height: 40px;
+        padding-top: 4px;
+        text-align: center;
+        background: #4b6584;
+        border-radius: 3px;
+        margin-left: 10px;
       }
-      .link4{
-        margin-left: 0;
+      .link1 a, .link2 a, .link3 a{
+        color: white;
+        font-size: 20px;
+        text-decoration: none;
       }
       .link4, .link5{
         width: 50%;
+        height: 40px;
+        padding-top: 4px;
+        text-align: center;
+        background: #20bf6b;
+        border-radius: 3px;
+        margin-left: 10px;
         margin-top: -40px;
       }
-      .content{
-        margin: 60px 10px 30px 0px;
+      .link4 a, .link5 a{
+        color: white;
+        font-size: 20px;
+        text-decoration: none;
+      }
+      .container1{
+        border: 1px solid white;
+        background-color: white;
+        width: 76%;
+        margin: 0px 200px 50px 175px;
+        margin-top: -30px;
+      }
+      .mobile-specs{
+        border-bottom: 1px solid #bdc3c7;
+        background-color: white;
         width: 100%;
-        height: 720px;
+        height: 280px;
+        margin-top: 5px;
+        display: flex;
       }
-      .content_img img{
-        transform: translateY(-70px);
+      .mobile-img{
+        width: 280px;
+        height: 280px;
       }
-      .content_body{
-        flex-direction: column;
+      .mobile-img img{
+        width: 280px;
+        height: 278px;
       }
-      .content_info{
-        margin-top: -40px;
+      .mobile-info{
+        width: 79%;
       }
-      /* footer */
+      .mobile-name-price{
+        width: 100%;
+        height: 50px;
+        display: flex;
+      }
+      .mobile-view-name{
+        width: 90%;
+        display: flex;
+      }
+      .mobile-view{
+        background-color: #0984e3;
+        color: white;
+        width: 7%;
+        padding-left: 12px;
+        padding-top: 3px;
+      }
+      .mobile-view p{
+        margin-top: -13px;
+        margin-left: 8px;
+      }
+      .mobile-name{
+        width: 80%;
+        height: 45px;
+      }
+      .mobile-name h3{
+        padding-left: 10px;
+        padding-top: 3px;
+      }
+      .star-rating{
+        padding-left: 10px;
+        margin-top: -15px;
+      }
+      .checked{
+        color: orange;
+      }
+      .mobile-price{
+        width: 20%;
+        height: 45px;
+      }
+      .mobile-price h3{
+        color: tomato;
+        padding-top: 3px;
+        padding-left: 5px;
+      }
+      .mobile-price p{
+        color: gray;
+        font-weight: 600;
+        padding-left: 5px;
+        margin-top: -15px;
+      }
+      .mobile-detail{
+        background-color: #f7f7f7;
+        display: flex;
+        width: 98.6%;
+        height: 160px;
+        margin-top: 15px;
+        border-radius: 3px;
+      }
+      .performance{
+        width: 25%;
+        padding-right: 20px;
+        padding-left: 10px;
+      }
+      .bar{
+        width: 90%;
+        height: 2px;
+        background-color: #95a5a6;
+      }
+      .bad{
+        width: 25%;
+        height: 2px;
+        background-color: #e74c3c;
+      }
+      .good{
+        width: 50%;
+        height: 2px;
+        background-color: #f1c40f;
+      }
+      .very-good{
+        width: 75%;
+        height: 2px;
+        background-color: #3498db;
+      }
+      .excellent{
+        width: 90%;
+        height: 2px;
+        background-color: #27ae60;
+      }
+      .information{
+        margin-top: 15px;
+        font-weight: 600;
+      }
+      .info{
+        margin-top: -14px;
+      }
+      .display{
+        width: 25%;
+        padding-right: 20px;
+        padding-left: 10px;
+      }
+      .camera{
+        width: 25%;
+        padding-right: 20px;
+        padding-left: 10px;
+      }
+      .battery{
+        width: 25%;
+        padding-right: 20px;
+        padding-left: 10px;
+      }
+      .short-info{
+        width: 98.6%;
+        height: 45px;
+        margin-top: 5px;
+      }
+       .full-specs{
+         margin-top: -7px;
+         margin-left: 2px;
+         color: #2980b9;
+       }
+      footer{
+        display: flex;
+        height: 280px;
+        background-color: #353b48;
+        color: #eee;
+        position: relative;
+      }
       .footer_info{
-        margin-left: 0;
-        flex: 1.5;
+        flex: 1;
+        padding: 10px;
+        margin-left: 140px;
+      }
+      .footer_info a{
+        color: #eee;
+        font-size: 20px;
+        padding-right: 10px;
       }
       .product{
-        margin-left: 0px;
+        flex: 1;
+        padding: 10px;
+        margin-left: 190px;
+      }
+      .product a{
+        color: #eee;
+      }
+      .product a:hover{
+        font-size: 20px;
+        text-decoration: none;
+        transition: 0.5s ease;
+      }
+      .footer_link{
+        flex: 1;
+        padding: 10px;
+      }
+      .footer_link a{
+        color: #eee;
+      }
+      .copyright{
+        width: 100%;
+        position: absolute;
+        background-color: #535c68;
+        color: #eee;
+        text-align: center;
+        bottom: 0px;
+      }
+      .copyright_text{
+        margin-top: 10px;
       }
 
-    }
-    @media (max-width: 768px){
-        /* search_bar */
+      @media (max-width: 1200px) {
+        .alert{
+          flex: 1;
+        }
+        #srh{
+          position: relative;
+          margin-left: 0px;
+          width: 50%;
+          display: flex;
+        }
+        #srh input{
+          width: 82%;
+        }
+        #srh button{
+          margin-left: 10px;
+        }
+
+        .brand-header{
+          width: 100%;
+          margin: 0;
+        }
+        .brand{
+          margin-top: 2px;
+          padding: 0;
+        }
+        .quick-link{
+          width: 100%;
+          margin-left: 0px;
+        }
+        .link1{
+          margin-left: 0;
+        }
+        .link1, .link2, .link3{
+          width: 32.6%;
+          margin-top: -5px;
+        }
+        .link4{
+          margin-left: 0;
+        }
+        .link4, .link5{
+          width: 50%;
+          margin-top: -40px;
+        }
+        .container1{
+          width: 100%;
+          margin-left: 0px;
+        }
+        .footer_info{
+          margin-left: 0;
+          flex: 1.5;
+        }
+        .product{
+          margin-left: 0px;
+        }
+      }
+      @media (max-width: 1005px){
+        .mobile-price h3{
+          font-size: 22px;
+        }
+        .mobile-price p{
+          font-size: 16px;
+        }
+      }
+      @media (max-width: 768px){
         .alert{
           display: none;
         }
@@ -451,33 +476,7 @@
         #srh button{
           margin-left: 2px;
         }
-        /* offer */
-        .offer{
-          width: 100%;
-          height: 430px;
-          margin-top: -30px;
-          flex-direction: column;
-        }
-        .offer1{
-          width: 97%;
-          height: 110px;
-          margin-bottom: 110px;
-          margin-left: 6px;
-        }
-        .offer2{
-          width: 97%;
-          height: 150px;
-          margin: 10px 10px 0 5px;
-        }
-        .banner-img{
-          height: 210px;
-        }
-        .content{
-          height: 800px;
-        }
-        .content_text{
-          font-size: 13.5px;
-        }
+
         .menu-toggle{
           display: block;
           width: 40px;
@@ -553,26 +552,56 @@
           width: 99%;
           margin: 5px 0 5px 2px;
         }
-        /* content page */
-        .content_img img{
-          height: 320px;
-          margin-left: 0;
+        .mobile-specs{
+          flex-direction: column;
+          width: 100%;
+          height: 1000px;
         }
-        .aff-link1{
+        .mobile-img{
+          width: 100%;
+        }
+        .mobile-info{
+          width: 100%;
+        }
+        .mobile-name-price{
+          width: 100%;
+          height: 100px;
+          margin-left: 0px;
           flex-direction: column;
         }
-        .affilated-link_flipcart{
-          margin-left:0;
+        .mobile-view-name{
+          width: 100%;
         }
-        button{
-          width: 350px;
-          margin-top: 5px;
+        .mobile-view{
+          width: 20%;
         }
-        .content_text{
-          font-size: 14px;
+        .mobile-view h5{
+          margin-left: 7px;
+          font-size: 22px;
         }
-
-          /* footer */
+        .mobile-view p{
+          margin-left: 15px;
+        }
+        .mobile-price{
+          width: 100%;
+        }
+        .mobile-detail{
+          flex-direction: column;
+          height: 550px;
+          margin-left: 2.5px;
+        }
+        .performance{
+          width: 100%;
+        }
+        .display{
+          width: 100%;
+        }
+        .camera{
+          width: 100%;
+        }
+        .battery{
+          width: 100%;
+        }
         footer{
           height: 500px;
           flex-direction: column;
