--- a/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
+++ b/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
@@ -16,7 +16,7 @@
           <div class="mobile-name-price">
             <div class="mobile-view-name">
               <div class="mobile-view">
-                <h5>399</h5>
+                <h5>129</h5>
                 <p><i class="fa fa-eye"></i></p>
               </div>
               <div class="mobile-name">
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="mobile-price">
-              <h3>Rs. 49,999</h3>
+              <h3>Rs. 1,17,100</h3>
               <p>see more price</p>
             </div>
           </div>
@@ -43,18 +43,18 @@
               </div>
               <div class="information">
                 <p>Hexa-core</p>
-                <p class="info">Apple A14 Bionic (5 nm)</p>
-                <p class="info">4 GB RAM</p>
+                <p class="info">Apple A13 Bionic (7 nm+)</p>
+                <p class="info">256GB 4GB RAM</p>
               </div>
             </div>
             <div class="display">
               <h4>Display</h4>
               <div class="bar">
-                <p class="good"></p>
+                <p class="very-good"></p>
               </div>
               <div class="information">
-                <p>5.4 inches (15.4 cm)</p>
-                <p class="info">Super Retina XDR OLED, HDR10</p>
+                <p>6.5 inches</p>
+                <p class="info">Super Retina XDR OLED capacitive touchscreen</p>
               </div>
             </div>
             <div class="camera">
@@ -63,20 +63,20 @@
                 <p class="excellent"></p>
               </div>
               <div class="information">
-                <p>12-MP + 12-MP Dual</p>
-                <p class="info">LED Flash</p>
+                <p>12-MP + 12-MP + 12-MP Triple</p>
+                <p class="info">Quad-LED dual-tone flash</p>
                 <p class="info">12 MP front camera</p>
               </div>
             </div>
             <div class="battery">
               <h4>Battery</h4>
               <div class="bar">
-                <p class="bad"></p>
+                <p class="good"></p>
               </div>
               <div class="information">
-                <p>3300 mAh</p>
-                <p class="info">Fast charging</p>
-                <p class="info">C-Type</p>
+                <p>3969 mAh</p>
+                <p class="info">Fast charging 18W</p>
+                <p class="info">Qi wireless charging</p>
               </div>
             </div>
           </div>
@@ -87,10 +87,96 @@
               </div>
             </div>
             <div class="full-specs">
-              <h5>Full specification</h5>
+              <h5><a href="{% url '11ProMax' %}">Full specification</a></h5>
             </div>
           </div>
         </div>
       </div>
+      <!-- 2 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/apple/apple-11-1.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>68</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>iPhone 11</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 68,300</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Hexa-core</p>
+                <p class="info">Apple A13 Bionic (7 nm+)</p>
+                <p class="info">64GB 4GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.1 inches</p>
+                <p class="info">Liquid Retina IPS LCD</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>12-MP + 12-MP Dual</p>
+                <p class="info">Quad-LED dual-tone flash</p>
+                <p class="info">12 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>3110 mAh</p>
+                <p class="info">Fast charging 18W</p>
+                <p class="info">Qi wireless charging</p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="icon">
+              <div data-title="16gb">
+                <p><i class="fas fa-sim-card"></i></p>
+              </div>
+            </div>
+            <div class="full-specs">
+              <h5><a href="{% url 'iphone11' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- 3 -->
     </div>
     {% endblock content%}
