--- a/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
+++ b/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
@@ -63,7 +63,7 @@
                 <p class="excellent"></p>
               </div>
               <div class="information">
-                <p>12-MP + 12-MP + 12-MP Triple</p>
+                <p>12-MP + 12-MP + 12-MP</p>
                 <p class="info">Quad-LED dual-tone flash</p>
                 <p class="info">12 MP front camera</p>
               </div>
@@ -95,7 +95,7 @@
       <!-- 2 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/apple/apple-11-1.jpg' %}" alt="">
+          <img  src="{% static 'image/mobile/apple/apple-11-1.jpeg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
