--- a/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
+++ b/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
@@ -81,11 +81,6 @@
             </div>
           </div>
           <div class="short-info">
-            <div class="icon">
-              <div data-title="16gb">
-                <p><i class="fas fa-sim-card"></i></p>
-              </div>
-            </div>
             <div class="full-specs">
               <h5><a href="{% url '11ProMax' %}">Full specification</a></h5>
             </div>
@@ -166,17 +161,172 @@
             </div>
           </div>
           <div class="short-info">
-            <div class="icon">
-              <div data-title="16gb">
-                <p><i class="fas fa-sim-card"></i></p>
-              </div>
-            </div>
             <div class="full-specs">
               <h5><a href="{% url 'iphone11' %}">Full specification</a></h5>
             </div>
           </div>
         </div>
       </div>
-        <!-- 3 -->
+      <!-- 3 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/apple/apple-se-1.png' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>064</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>iPhone SE</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 42,500</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>Hexa-core</p>
+                <p class="info">Apple A13 Bionic (7 nm+)</p>
+                <p class="info">64GB 3GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>4.7 inches</p>
+                <p class="info">Retina IPS LCD</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>12-MP Single</p>
+                <p class="info">Quad-LED dual-tone flash</p>
+                <p class="info">7 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>1821 mAh</p>
+                <p class="info">Fast charging 18W</p>
+                <p class="info">Qi wireless charging</p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'iphoneSE' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 4 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/apple/apple-se-1.png' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>075</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>iPhone XR</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 52,500</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>Dual-core</p>
+                <p class="info">Apple A9 (14 nm)</p>
+                <p class="info">16GB 2GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>4.7 inches</p>
+                <p class="info">Retina IPS LCD</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>12-MP Single</p>
+                <p class="info">Quad-LED dual-tone flash</p>
+                <p class="info">5 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>1715 mAh</p>
+                <p class="info">Fast charging 18W</p>
+                <p class="info">Qi wireless charging</p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'iphoneXR' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 5 -->
     </div>
     {% endblock content%}
