--- a/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
+++ b/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
@@ -10,6 +10,86 @@
     <div class="container1">
       <div class="mobile-specs">
         <div class="mobile-img">
+          <img  src="{% static 'image/mobile/apple/iphone-12-pro-max-1.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>655</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>iPhone 12 Pro Max</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 1,59,900</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Hexa-core</p>
+                <p class="info">Apple A14 Bionic (5 nm)</p>
+                <p class="info">128GB 4GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.7 inches</p>
+                <p class="info">Super Retina XDR OLED</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>12-MP + 12-MP + 12-MP</p>
+                <p class="info">Quad-LED dual-tone flash</p>
+                <p class="info">12 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>3969 mAh</p>
+                <p class="info">Fast charging 20W</p>
+                <p class="info">Qi wireless charging</p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'iphone12promax' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 1 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
           <img  src="{% static 'image/mobile/apple/apple-11-pro-max-1.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
@@ -185,7 +265,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
                   <span class="fa fa-star"></span>
                 </div>
               </div>
@@ -250,7 +330,7 @@
       <!-- 4 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/apple/apple-se-1.png' %}" alt="">
+          <img  src="{% static 'image/mobile/apple/Apple-iPhone-XR-1.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
@@ -265,7 +345,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
                   <span class="fa fa-star"></span>
                 </div>
               </div>
