realme home setting

--- a/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
+++ b/limbo/affiliate/templates/mobile/apple/apple_page/apple_page.html
@@ -8,7 +8,7 @@
     {% block content%}
     <!-- content -->
     <div class="container1">
-      <div class="mobile-specs"> 
+      <div class="mobile-specs">
         <div class="mobile-img">
           <img  src="{% static 'image/mobile/apple/iphone-12-pro-max-1.jpg' %}" alt="">
         </div>
@@ -170,7 +170,7 @@
       <!-- 6 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/apple/iphone-12-1.jpg' %}" alt="{% static 'image/mobile/realme/demo.jpg' %}">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
@@ -250,7 +250,7 @@
       <!-- 8 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/apple/iphone-12-mini-1.jpg' %}" alt="{% static 'image/mobile/realme/demo.jpg' %}">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
