--- a/limbo/affiliate/templates/mobile/realme/realme_page/realme_page.html
+++ b/limbo/affiliate/templates/mobile/realme/realme_page/realme_page.html
@@ -8,9 +8,9 @@
     {% block content%}
     <!-- content -->
     <div class="container1">
-      <div class="mobile-specs"> 
+      <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/realme/realme-q2-1.jpg' %}" alt="{% static 'image/mobile/realme/demo.jpg' %}">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
@@ -90,7 +90,7 @@
       <!-- 1 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/realme/realme-q2i-1.jpg' %}" alt="{% static 'image/mobile/realme/demo.jpg' %}">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
@@ -170,7 +170,7 @@
       <!-- 2 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/realme/realme-x7-pro-1.jpg' %}" alt="{% static 'image/mobile/realme/demo.jpg' %}">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
@@ -251,7 +251,7 @@
       <!-- 3 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/realme/realme-narzo20-pro-1.jpg' %}" alt="{% static 'image/mobile/realme/demo.jpg' %}">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
